Fixed styling issue with filtering on mobile devices

--- a/pages/smart/styles/todo-list.css
+++ b/pages/smart/styles/todo-list.css
@@ -100,7 +100,7 @@ todo-list {
 			padding-bottom: 4em;
 		}
 		.todo-list__filter {
-			padding-top: 4em;
+			padding-top: 5.5em;
 		}
 
 		form {
